# sf1r-ad-delivery

./: README.md  resource_config.yml
source/: CMakeLists.txt  ConfigureChecks.cmake  Packaging-code.cmake  Packaging.cmake
source/bundles/index/: IndexBundleActivator.cpp  IndexBundleActivator.h  IndexSearchService.cpp  IndexSearchService.h
source/bundles/mining/: MiningBundleActivator.cpp  MiningSearchService.cpp  MiningSearchService.h
source/core/: CMakeLists.txt
source/core/ad-manager/: AdClickPredictor.cpp  AdClickPredictor.h  AdFeedbackMgr.cpp  AdFeedbackMgr.h  AdIndexManager.cpp  AdIndexManager.h  AdMiningTask.cpp  AdMiningTask.h  AdRecommender.cpp  AdRecommender.h  AdSearchService.cpp  AdSearchService.h  AdSelector.cpp  AdSelector.h  AdStreamSubscriber.cpp  AdStreamSubscriber.h  B5MEvent.hh
source/core/ad-manager/sponsored-ad-search/: AdAucationLogMgr.cpp  AdAucationLogMgr.h  AdAuctionLogMgr.cpp  AdAuctionLogMgr.h  AdBidStrategy.cpp  AdBidStrategy.h  AdCommonDataType.h  AdManualBidInfoMgr.cpp  AdManualBidInfoMgr.h  AdResultType.h  AdScoreMgr.h  AdSponsoredMgr.cpp  AdSponsoredMgr.h
source/core/aggregator-manager/: SearchWorker.cpp
source/core/common/: Keys.inl  ResultType.h
source/core/configuration-manager/: AdIndexConfig.h  LaserConfig.h  LaserIndexConfig.h  MiningConfig.h  MiningSchema.h  SuffixMatchConfig.h
source/core/document-manager/text-summarization-submanager/: TextSummarizationSubManager.cpp
source/core/la-manager/: LAPool.cpp
source/core/laser-manager/: AdClusteringInfo.h  AdIndexManager.cpp  AdIndexManager.h  AdInfo.h  CMakeLists.txt  ConfigureChecks.cmake  HierarchicalModel.cpp  HierarchicalModel.h  LSHIndexModel.cpp  LSHIndexModel.h  LaserGenericModel.cpp  LaserGenericModel.h  LaserIndexTask.h  LaserManager.cpp  LaserManager.h  LaserModel.h  LaserModelDB.cpp  LaserModelDB.h  LaserModelFactory.cpp  LaserModelFactory.h  LaserOfflineModel.cpp  LaserOfflineModel.h  LaserOfflineModelDB.h  LaserOnlineModel.cpp  LaserOnlineModel.h  LaserOnlineModelDB.cpp  LaserOnlineModelDB.h  LaserRecommend.cpp  LaserRecommend.h  LaserRecommendParam.h  LaserRpcServer.cpp  LaserRpcServer.h  Packaging.cmake  SparseVector.h  Tokenizer.cpp  Tokenizer.h  TopNClustering.h  TopNClusteringDB.cpp  TopNClusteringDB.h  TopnClusteringModel.cpp  (+2 more)
source/core/laser-manager/clusteringmanager/: CMakeLists.txt
source/core/laser-manager/clusteringmanager/clustering/: CMakeLists.txt  ComputationTool.cpp  ComputationTool.h  OriDocument.h  PCAClustering.cpp  PCAClustering.h  PCAProcess.cpp  PCAProcess.h  PCARunner.cpp  PCARunner.h  SegmentTool.cpp  SegmentTool.h  SortTool.h  clustering_main.cpp
source/core/laser-manager/clusteringmanager/common/: constant.h  utils.h
source/core/laser-manager/clusteringmanager/type/: CatDictionary.h  ClusteringData.h  ClusteringDataAdapter.h  ClusteringDataStorage.cpp  ClusteringDataStorage.h  ClusteringInfo.h  ClusteringListDes.cpp  ClusteringListDes.h  Document.h  LevelDBClusteringData.cpp  LevelDBClusteringData.h  ModelType.h  Term.h  TermDictionary.h
source/core/laser-manager/conf/: Configuration.cpp  Configuration.h  clustering.cfg
source/core/laser-manager/context/: KVClient.h  MQClient.cpp  MQClient.h
source/core/laser-manager/predict/: Compaign.cpp  Compaign.h  LaserOnlineModel.cpp  LaserOnlineModel.h  PerUserOnlineModel.h  PredictTool.cpp  PredictTool.h  Request.cpp  Request.h  Response.cpp  Response.h  TopNCluster.h  TopNClusterContainer.cpp  TopNClusterContainer.h  TopNController.cpp  TopNController.h
source/core/laser-manager/service/: CLUSTERINGServerRequest.cpp  CLUSTERINGServerRequest.h  CMakeLists.txt  DataType.h  LaserProcess.cpp  LaserProcess.h  LaserServer.cpp  OnSignal.cpp  OnSignal.h  RouterInitializer.cpp  RouterInitializer.h  RpcServer.cpp  RpcServer.h  TermParser.cpp  TermParser.h
source/core/laser-manager/test/: CMakeLists.txt  test_laseronlinemodel.cpp  test_level_db.cpp  test_level_db2.cpp  test_level_db_for_res.cpp  test_load_term.cpp  test_message_pack.cpp  test_predict.cpp  test_rpc_server.cpp  test_serialization.cpp  test_split.cpp  test_topnclustercontainer.cpp
source/core/log-manager/: UserQuery.cpp
source/core/mining-manager/: MiningManager.cpp  MiningManager.h
source/core/mining-manager/suffix-match-manager/: SuffixMatchManager.cpp
source/core/node-manager/: DistributeFileSyncMgr.cpp
source/core/node-manager/sharding/: ShardingConfig.h
source/core/query-manager/: SearchingEnumerator.h
source/core/slim-manager/: SlimManager.cpp  SlimManager.h  SlimRecommend.cpp  SlimRecommend.h  SlimRecommendParam.h  SlimRpcServer.cpp  SlimRpcServer.h
source/generators/: router_initializer.yml
source/process/: CMakeLists.txt  CobraProcess.cpp  CobraProcess.h
source/process/clustering/: ClusteringMain.cpp  ClusteringMatcher.cpp  Configuration.cpp  Configuration.h  clustering.cfg  clustering_main.cpp
source/process/common/: CollectionTask.cpp  RouterInitializer.cpp  XmlConfigParser.cpp  XmlConfigParser.h
source/process/controllers/: AdController.cpp  AdController.h  CollectionHandler.cpp  CollectionHandler.h  CommandsController.cpp  CommandsController.h  DocumentsSearchHandler.cpp  LaserController.cpp  LaserController.h  LaserHandler.cpp  LaserHandler.h  SlimController.cpp  SlimController.h  SlimHandler.cpp  SlimHandler.h
source/process/distribute/: MasterServer.h
source/process/parsers/: SearchParser.cpp
source/process/renderers/: DocumentsRenderer.cpp  DocumentsRenderer.h
source/process/slim/: slim_main.cpp
source/process/slim/model/: coo_matrix.h  csr_matrix.h  id_mapper.h  learner.h  slim_sgd.h  slim_thread_manager.h  weight_vector.h
source/process/slim/server/: rpc_server.h
stress-test/: laser-stress-test.jmx
test/: CMakeLists.txt
test/ad-manager/: CMakeLists.txt  t_sponsored_ad.cpp
test/document-manager/: CMakeLists.txt
test/mining-manager/: CMakeLists.txt  GroupManagerTestFixture.cpp  t_ad_ctr.cpp  t_level_db_for_res.cpp
test/query-manager/: CMakeLists.txt
test/search-manager/: CMakeLists.txt
